<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ice.ice_plate.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_by_takephoto"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="82dp"
                android:background="@drawable/shape_blue_bg"
                android:text="@string/takepicReg"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_by_takefilephoto"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/btn_by_takephoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:background="@drawable/shape_blue_bg"
                android:text="@string/takefilepic"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/img_by_takephoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_by_takefilephoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tx_by_takephoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_by_takephoto"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>